--- a/.env_template
+++ b/.env_template
@@ -1,9 +1,10 @@
 # .env file
 DATABASE_URL=
 BOT_TOKEN=
-REQUEST_TIMEOUT=10
-RSS_DATA_RETENTION_DAYS=30
-CHECK_INTERVAL_SECONDS=3600
 MAX_RSS_FEEDS=5
 RSS_CHECK_INTERVAL=600
 OLD_RSS_HISTORY_DAYS=30
+LOG_FILE_PATH=rss.log
+MAX_LOG_SIZE=5242880
+BACKUP_COUNT=3
+LOG_LEVEL=INFO
