fix: 로그 파일 경로 지정 오류 수정

--- a/.env_template
+++ b/.env_template
@@ -4,7 +4,7 @@ BOT_TOKEN=
 MAX_RSS_FEEDS=5
 RSS_CHECK_INTERVAL=600
 OLD_RSS_HISTORY_DAYS=30
-LOG_FILE_PATH=rss.log
+LOG_FILE_NAME=rss.log
 MAX_LOG_SIZE=5242880
 BACKUP_COUNT=3
 LOG_LEVEL=INFO
